# SP_PC

./: CMakeLists.txt  Makefile  dynamic_string_array.c  dynamic_string_array.h  err.c  err.h  eval.c  eval.h  main.c  makefile  output.c  output.h  spamid.c  testfile_loader.c  testfile_loader.h  textfile_loader.c  textfile_loader.h  trainfile_loader.c  trainfile_loader.h  word_hashtable.c  word_hashtable.h
